--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,10 @@
 *{
     font-family: sans-serif;
   }
+  .cart:hover{
+    background-color: rgb(41, 43, 44);
+    transition:0.8s;
+  }
 
   .row {
     display: flex;
@@ -104,4 +108,15 @@
   height: 100%;
   position: fixed;
   right: 0;
+}
+.close-cart:hover{
+background-color: pink;
+border-radius: 5px;
+transition: 0.5s;
+}
+.borderr{
+border-bottom: 1px black solid;
+  border-radius: 5px;
+  width: 100%;
+  height: 180px;
 }
